Fix the select field overflow issue for advanced search input fields

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/react-awesome-query.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/react-awesome-query.less
@@ -228,7 +228,13 @@
   width: 180px;
 
   .ant-select {
-    width: 100% !important;
+    min-width: 100% !important;
+  }
+  .ant-select-multiple {
+    .ant-select-selection-item-content {
+      text-overflow: ellipsis;
+      max-width: 200px;
+    }
   }
 }
 
@@ -248,6 +254,13 @@
   min-width: 180px;
   .ant-select,
   .widget--widget {
-    width: 100% !important;
+    min-width: 100% !important;
+  }
+
+  .ant-select-multiple {
+    .ant-select-selection-item-content {
+      text-overflow: ellipsis;
+      max-width: 200px;
+    }
   }
 }
